--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Mike Cronin",
   "license": "ISC",
   "scripts": {
+    "lint": "npx eslint . --ext .js,.tsx,.ts",
     "test": "npx jest --config='./jest.config.js' --watchAll"
   },
   "dependencies": {
@@ -43,11 +44,13 @@
     "@hapi/eslint-config-hapi": "^12.2.0",
     "@hapi/eslint-plugin-hapi": "^4.3.4",
     "@types/jest": "^24.0.18",
-    "eslint": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "hpal": "^2.2.1",
     "hpal-debug": "1.x.x",
